# vf

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package.json
assets/: input.css  tailwind.css
src/: main.rs  models.rs
src/components/: file_list.rs  menubar.rs  mod.rs  sidebar.rs
src/fs/: operations.rs
